--- a/manifest.json
+++ b/manifest.json
@@ -49,9 +49,9 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "wxe5cc0838da773384",
+        "appid" : "wx78853d4fb5f58d7b",
         "setting" : {
-            "urlCheck" : false,
+            "urlCheck" : true,
             "es6" : true,
             "postcss" : true,
             "minified" : true
