--- a/manifest.json
+++ b/manifest.json
@@ -49,7 +49,7 @@
     },
     "quickapp" : {},
     "mp-weixin" : {
-        "appid" : "wxe5cc0838da773384",
+        "appid" : "wx78853d4fb5f58d7b",
         "setting" : {
             "urlCheck" : false,
             "es6" : true,
